  - Updated CPU instrumentation callbacks.
  - Fixed Bochs internal debugger breakpoints/watchpoints handling.

- Configure and compile
  - Added ability to configure CPUID vendor/brand strings through .bochsrc
    (patch from @SF by Doug Reed).
  - Removed Peter Tattam's closed source external debugger interface from
    the code.

- I/O Devices
  - Hard drive / cdrom
    - PACKET-DMA feature now supported by all ATAPI commands
    - ATAPI command 0x1A added (based on the Qemu implementation)
  - sb16
    - Added limited ALSA sound support on Linux (PCM/MIDI output)
    - FM synthesizer now usable with MIDI output (simple piano only)
      - Fixed OPL frequency to MIDI note translation
      - Fixed MIDI output command
  - keyboard
    - added keyboard controller commands 0xCA and 0xCB

- Misc
  - Updated Bochs TESTFORM to version 0.4

- SF patches applied
 [1984662] red led for disk write and titlebar mod by ggbsf
 [2142955] Fix for monitor/mwait by Doug Gibson
 [2137774] Patch to fix bug: cdrom: read_block: lseek returned error by Gabor Olah
 [2134642] Fix scan_to_scanascii table for F11 and F12 by Ben Guthro & Steve Ofsthun
 [2123036] sdl fullscreen fix by ggbsf
 [2073039] Remove CMOS accsess from AML code by Gleb Natapov
 [2072168] smbios: add L1-L3 cache handle to processor information by Sebastian
 [2055416] bochsrc cpu options for cpuid vendor and brand string by Doug Reed
 [2035278] rombios: Fix return from BEV via retf by Sebastian
 [2035260] rombios: El Torito load segment fix by Sebastian
 [2031978] Fix VMware backdoor command 0Ah by Jamie Lokier
 [2015277] Remove obsolete comment about DATA_SEG_DEFS_HERE hack by Sebastian
 [2011268] Set new default format and unit only if both are supported by Sebastian
 [2001919] gdbstub: fix qSupported reply by Sebastian
 [2001912] gdbstub: enclose packet data by apostrophes by Sebastian
 [1998071] fix missing SIGHUP and SIGQUIT with term ui on mingw by Sebastian
 [1998063] fix wrong colors with term ui by Sebastian